--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: saraswatdinesh/saraswatdinesh
+repository: saraswatdinesh/saraswatdinesh.github.io
 favicon: images/favicon.ico
 
 version: 2
