profile photo changes

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ linkedin_username: dineshrksaraswat
 
 # About Section
 # about_title: About Me
-about_profile_image: images/jg2.jpg
+about_profile_image: images/profile.jpeg
 about_content: |
   Hi, my name is Dinesh Saraswat, I'm a full stack web developer with over 9 years experience currently specialising in React development.
   I am currently working for NatWest as a Lead Frontend Software Engineer on their comercial banking platform, Bankline.
