not many changes

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ linkedin_username: dineshrksaraswat
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: |
-  Hi, my name is Dinesh Saraswat, I'm a full stack web developer with over 9 years experience currently specialising in React development.
-  I am currently working for NatWest as a Lead Frontend Software Engineer on their comercial banking platform, Bankline.
+
+  Experienced Data Engineer and Consultant with 11+ years of expertise in designing scalable data pipelines and cloud solutions. Currently pursuing an MS in Business Analytics, set to graduate in December 2024, and seeking impactful opportunities in data engineering and analytics.
 
   I enjoy making clean and interactive UI that is quick and easy to use whilst also giving users an enjoyable experience.
   I like working creating clean and efficient developer experiences to allow developers to focus on code quality and the end user experience.
