--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,7 @@ linkedin_username: dineshrksaraswat
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: |
-
-  Experienced Data Engineer and Consultant with 11+ years of expertise in designing scalable data pipelines and cloud solutions. Currently pursuing an MS in Business Analytics, set to graduate in December 2024, and seeking impactful opportunities in data engineering and analytics.
-
-  I enjoy making clean and interactive UI that is quick and easy to use whilst also giving users an enjoyable experience.
-  I like working creating clean and efficient developer experiences to allow developers to focus on code quality and the end user experience.
-  I have worked with a range of different languages and frameworks and I am always looking for opportunities to work
-  with something new. The things that I currently have the most experience working with are:
+  I am an experienced Data Engineer with a proven background in designing and optimizing large-scale data pipelines, cloud integration, and big data analytics. I specialize in leveraging tools like Python, PySpark, AWS, and SQL to drive data-driven solutions for complex business challenges. Currently, I am pursuing a Master’s in Business Analytics at CSU East Bay and seeking new opportunities to apply my expertise in data engineering and analytics:
   <mark>ES6 Javascript</mark>,
   <mark>React &amp; Redux</mark>,
   <mark>Node.js</mark>,
